src/antlr/generated/BSLMethodDescriptionParser.ts
// Generated from ./src/antlr/BSLMethodDescriptionParser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
    ATN,
    ATNDeserializer,
    DecisionState,
    DFA,
    FailedPredicateException,
    RecognitionException,
    NoViableAltException,
    BailErrorStrategy,
    Parser,
    ParserATNSimulator,
    RuleContext,
    ParserRuleContext,
    PredictionMode,
    PredictionContextCache,
    TerminalNode,
    RuleNode,
    Token,
    TokenStream,
    Interval,
    IntervalSet,
} from "antlr4";
import BSLMethodDescriptionParserListener from "./BSLMethodDescriptionParserListener.js";
import BSLMethodDescriptionParserVisitor from "./BSLMethodDescriptionParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

import { BslParserRuleContext } from "../../core/context";

export default class BSLMethodDescriptionParser extends Parser {
    public static readonly PARAMETERS_KEYWORD = 1;

    public static readonly RETURNS_KEYWORD = 2;

    public static readonly EXAMPLE_KEYWORD = 3;

    public static readonly CALL_OPTIONS_KEYWORD = 4;

    public static readonly DEPRECATE_KEYWORD = 5;

    public static readonly SEE_KEYWORD = 6;

    public static readonly OF_KEYWORD = 7;

    public static readonly EOL = 8;

    public static readonly SPACE = 9;

    public static readonly STAR = 10;

    public static readonly DASH = 11;

    public static readonly COLON = 12;

    public static readonly COMMA = 13;

    public static readonly COMMENT = 14;

    public static readonly WORD = 15;

    public static readonly DOTSWORD = 16;

    public static readonly LPAREN = 17;

    public static readonly RPAREN = 18;

    public static readonly ANYSYMBOL = 19;

    public static readonly EOF = Token.EOF;

    public static readonly RULE_methodDescription = 0;

    public static readonly RULE_deprecate = 1;

    public static readonly RULE_deprecateDescription = 2;

    public static readonly RULE_descriptionBlock = 3;

    public static readonly RULE_description = 4;

    public static readonly RULE_descriptionString = 5;

    public static readonly RULE_examples = 6;

    public static readonly RULE_examplesString = 7;

    public static readonly RULE_callOptions = 8;

    public static readonly RULE_callOptionsString = 9;

    public static readonly RULE_parameters = 10;

    public static readonly RULE_parameterString = 11;

    public static readonly RULE_parameter = 12;

    public static readonly RULE_subParameter = 13;

    public static readonly RULE_parameterName = 14;

    public static readonly RULE_returnsValues = 15;

    public static readonly RULE_returnsValuesString = 16;

    public static readonly RULE_returnsValue = 17;

    public static readonly RULE_typesBlock = 18;

    public static readonly RULE_typeDescription = 19;

    public static readonly RULE_type = 20;

    public static readonly RULE_simpleType = 21;

    public static readonly RULE_listTypes = 22;

    public static readonly RULE_complexType = 23;

    public static readonly RULE_hyperlinkType = 24;

    public static readonly RULE_spitter = 25;

    public static readonly RULE_hyperlinkBlock = 26;

    public static readonly RULE_startPart = 27;

    public static readonly literalNames: (string | null)[] = [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        "':'",
        "','",
        "'//'",
        null,
        null,
        "'('",
        "')'",
    ];

    public static readonly symbolicNames: (string | null)[] = [
        null,
        "PARAMETERS_KEYWORD",
        "RETURNS_KEYWORD",
        "EXAMPLE_KEYWORD",
        "CALL_OPTIONS_KEYWORD",
        "DEPRECATE_KEYWORD",
        "SEE_KEYWORD",
        "OF_KEYWORD",
        "EOL",
        "SPACE",
        "STAR",
        "DASH",
        "COLON",
        "COMMA",
        "COMMENT",
        "WORD",
        "DOTSWORD",
        "LPAREN",
        "RPAREN",
        "ANYSYMBOL",
    ];

    // tslint:disable:no-trailing-whitespace
    public static readonly ruleNames: string[] = [
        "methodDescription",
        "deprecate",
        "deprecateDescription",
        "descriptionBlock",
        "description",
        "descriptionString",
        "examples",
        "examplesString",
        "callOptions",
        "callOptionsString",
        "parameters",
        "parameterString",
        "parameter",
        "subParameter",
        "parameterName",
        "returnsValues",
        "returnsValuesString",
        "returnsValue",
        "typesBlock",
        "typeDescription",
        "type",
        "simpleType",
        "listTypes",
        "complexType",
        "hyperlinkType",
        "spitter",
        "hyperlinkBlock",
        "startPart",
    ];

    public get grammarFileName(): string {
        return "BSLMethodDescriptionParser.g4";
    }

    public get literalNames(): (string | null)[] {
        return BSLMethodDescriptionParser.literalNames;
    }

    public get symbolicNames(): (string | null)[] {
        return BSLMethodDescriptionParser.symbolicNames;
    }

    public get ruleNames(): string[] {
        return BSLMethodDescriptionParser.ruleNames;
    }

    public get serializedATN(): number[] {
        return BSLMethodDescriptionParser._serializedATN;
    }

    protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
        return new FailedPredicateException(this, predicate, message);
    }

    constructor(input: TokenStream) {
        super(input);
        this._interp = new ParserATNSimulator(
            this,
            BSLMethodDescriptionParser._ATN,
            BSLMethodDescriptionParser.DecisionsToDFA,
            new PredictionContextCache()
        );
    }

    // @RuleVersion(0)
    public methodDescription(): MethodDescriptionContext {
        let localctx: MethodDescriptionContext = new MethodDescriptionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, BSLMethodDescriptionParser.RULE_methodDescription);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 200;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 48, this._ctx)) {
                    case 1:
                        {
                            {
                                this.state = 57;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 0, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 56;
                                            this.deprecate();
                                        }
                                        break;
                                }
                                this.state = 60;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 1, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 59;
                                            this.descriptionBlock();
                                        }
                                        break;
                                }
                                this.state = 63;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 2, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 62;
                                            this.parameters();
                                        }
                                        break;
                                }
                                this.state = 66;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 3, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 65;
                                            this.callOptions();
                                        }
                                        break;
                                }
                                this.state = 69;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 4, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 68;
                                            this.returnsValues();
                                        }
                                        break;
                                }
                                this.state = 72;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                if (_la === 9 || _la === 14) {
                                    {
                                        this.state = 71;
                                        this.examples();
                                    }
                                }
                            }
                        }
                        break;
                    case 2:
                        {
                            {
                                this.state = 75;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 6, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 74;
                                            this.deprecate();
                                        }
                                        break;
                                }
                                this.state = 78;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 7, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 77;
                                            this.descriptionBlock();
                                        }
                                        break;
                                }
                                this.state = 81;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 8, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 80;
                                            this.parameters();
                                        }
                                        break;
                                }
                                this.state = 84;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 9, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 83;
                                            this.examples();
                                        }
                                        break;
                                }
                                this.state = 87;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 10, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 86;
                                            this.returnsValues();
                                        }
                                        break;
                                }
                                this.state = 90;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                if (_la === 9 || _la === 14) {
                                    {
                                        this.state = 89;
                                        this.callOptions();
                                    }
                                }
                            }
                        }
                        break;
                    case 3:
                        {
                            {
                                this.state = 93;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 12, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 92;
                                            this.deprecate();
                                        }
                                        break;
                                }
                                this.state = 96;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 13, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 95;
                                            this.descriptionBlock();
                                        }
                                        break;
                                }
                                this.state = 99;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 14, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 98;
                                            this.parameters();
                                        }
                                        break;
                                }
                                this.state = 102;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 15, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 101;
                                            this.callOptions();
                                        }
                                        break;
                                }
                                this.state = 105;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 16, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 104;
                                            this.examples();
                                        }
                                        break;
                                }
                                this.state = 108;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                if (_la === 9 || _la === 14) {
                                    {
                                        this.state = 107;
                                        this.returnsValues();
                                    }
                                }
                            }
                        }
                        break;
                    case 4:
                        {
                            {
                                this.state = 111;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 18, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 110;
                                            this.deprecate();
                                        }
                                        break;
                                }
                                this.state = 114;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 19, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 113;
                                            this.descriptionBlock();
                                        }
                                        break;
                                }
                                this.state = 117;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 20, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 116;
                                            this.parameters();
                                        }
                                        break;
                                }
                                this.state = 120;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 21, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 119;
                                            this.examples();
                                        }
                                        break;
                                }
                                this.state = 123;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 22, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 122;
                                            this.callOptions();
                                        }
                                        break;
                                }
                                this.state = 126;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                if (_la === 9 || _la === 14) {
                                    {
                                        this.state = 125;
                                        this.returnsValues();
                                    }
                                }
                            }
                        }
                        break;
                    case 5:
                        {
                            {
                                this.state = 129;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 24, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 128;
                                            this.descriptionBlock();
                                        }
                                        break;
                                }
                                this.state = 132;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 25, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 131;
                                            this.parameters();
                                        }
                                        break;
                                }
                                this.state = 135;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 26, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 134;
                                            this.callOptions();
                                        }
                                        break;
                                }
                                this.state = 138;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 27, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 137;
                                            this.returnsValues();
                                        }
                                        break;
                                }
                                this.state = 141;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 28, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 140;
                                            this.examples();
                                        }
                                        break;
                                }
                                this.state = 144;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                if (_la === 9 || _la === 14) {
                                    {
                                        this.state = 143;
                                        this.deprecate();
                                    }
                                }
                            }
                        }
                        break;
                    case 6:
                        {
                            {
                                this.state = 147;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 30, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 146;
                                            this.descriptionBlock();
                                        }
                                        break;
                                }
                                this.state = 150;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 31, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 149;
                                            this.parameters();
                                        }
                                        break;
                                }
                                this.state = 153;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 32, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 152;
                                            this.examples();
                                        }
                                        break;
                                }
                                this.state = 156;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 33, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 155;
                                            this.returnsValues();
                                        }
                                        break;
                                }
                                this.state = 159;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 34, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 158;
                                            this.callOptions();
                                        }
                                        break;
                                }
                                this.state = 162;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                if (_la === 9 || _la === 14) {
                                    {
                                        this.state = 161;
                                        this.deprecate();
                                    }
                                }
                            }
                        }
                        break;
                    case 7:
                        {
                            {
                                this.state = 165;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 36, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 164;
                                            this.descriptionBlock();
                                        }
                                        break;
                                }
                                this.state = 168;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 37, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 167;
                                            this.parameters();
                                        }
                                        break;
                                }
                                this.state = 171;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 38, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 170;
                                            this.callOptions();
                                        }
                                        break;
                                }
                                this.state = 174;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 39, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 173;
                                            this.examples();
                                        }
                                        break;
                                }
                                this.state = 177;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 40, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 176;
                                            this.returnsValues();
                                        }
                                        break;
                                }
                                this.state = 180;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                if (_la === 9 || _la === 14) {
                                    {
                                        this.state = 179;
                                        this.deprecate();
                                    }
                                }
                            }
                        }
                        break;
                    case 8:
                        {
                            {
                                this.state = 183;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 42, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 182;
                                            this.descriptionBlock();
                                        }
                                        break;
                                }
                                this.state = 186;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 43, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 185;
                                            this.parameters();
                                        }
                                        break;
                                }
                                this.state = 189;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 44, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 188;
                                            this.examples();
                                        }
                                        break;
                                }
                                this.state = 192;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 45, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 191;
                                            this.callOptions();
                                        }
                                        break;
                                }
                                this.state = 195;
                                this._errHandler.sync(this);
                                switch (this._interp.adaptivePredict(this._input, 46, this._ctx)) {
                                    case 1:
                                        {
                                            this.state = 194;
                                            this.returnsValues();
                                        }
                                        break;
                                }
                                this.state = 198;
                                this._errHandler.sync(this);
                                _la = this._input.LA(1);
                                if (_la === 9 || _la === 14) {
                                    {
                                        this.state = 197;
                                        this.deprecate();
                                    }
                                }
                            }
                        }
                        break;
                }
                this.state = 202;
                this.match(BSLMethodDescriptionParser.EOF);
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    // @RuleVersion(0)
    public deprecate(): DeprecateContext {
        let localctx: DeprecateContext = new DeprecateContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, BSLMethodDescriptionParser.RULE_deprecate);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 204;
                this.startPart();
                this.state = 205;
                this.match(BSLMethodDescriptionParser.DEPRECATE_KEYWORD);
                this.state = 208;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 49, this._ctx)) {
                    case 1:
                        {
                            this.state = 206;
                            this.match(BSLMethodDescriptionParser.SPACE);
                            this.state = 207;
                            this.deprecateDescription();
                        }
                        break;
                }
                this.state = 211;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 8) {
                    {
                        this.state = 210;
                        this.match(BSLMethodDescriptionParser.EOL);
                    }
                }
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    // @RuleVersion(0)
    public deprecateDescription(): DeprecateDescriptionContext {
        let localctx: DeprecateDescriptionContext = new DeprecateDescriptionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, BSLMethodDescriptionParser.RULE_deprecateDescription);
        let _la: number;
        try {
            let _alt: number;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 213;
                _la = this._input.LA(1);
                if (_la <= 0 || _la === 8 || _la === 9) {
                    this._errHandler.recoverInline(this);
                } else {
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 217;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 51, this._ctx);
                while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 214;
                                _la = this._input.LA(1);
                                if (_la <= 0 || _la === 8) {
                                    this._errHandler.recoverInline(this);
                                } else {
                                    this._errHandler.reportMatch(this);
                                    this.consume();
                                }
                            }
                        }
                    }
                    this.state = 219;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 51, this._ctx);
                }
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    // @RuleVersion(0)
    public descriptionBlock(): DescriptionBlockContext {
        let localctx: DescriptionBlockContext = new DescriptionBlockContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, BSLMethodDescriptionParser.RULE_descriptionBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 222;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 52, this._ctx)) {
                    case 1:
                        {
                            this.state = 220;
                            this.hyperlinkBlock();
                        }
                        break;
                    case 2:
                        {
                            this.state = 221;
                            this.description();
                        }
                        break;
                }
                this.state = 225;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 8) {
                    {
                        this.state = 224;
                        this.match(BSLMethodDescriptionParser.EOL);
                    }
                }
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    // @RuleVersion(0)
    public description(): DescriptionContext {
        let localctx: DescriptionContext = new DescriptionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, BSLMethodDescriptionParser.RULE_description);
        try {
            let _alt: number;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 228;
                this._errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1:
                            {
                                {
                                    this.state = 227;
                                    this.descriptionString();
                                }
                            }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    this.state = 230;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 54, this._ctx);
                } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
            }
        } catch (re) {
            if (re instanceof RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }
